dnl Process this file with autoconf to produce a configure script.
AC_INIT
AC_CONFIG_SRCDIR([regex.c])

AC_CANONICAL_TARGET

AC_PROG_CC
AC_PROG_INSTALL

dnl I'm not sure if AC_USE_SYSTEM_EXTENSIONS and AC_FUNC_GETMNTENT are really necessary.  The
dnl Autoconf documentation isn't specific about which BSD functions they
dnl provide.
AC_USE_SYSTEM_EXTENSIONS
AC_FUNC_GETMNTENT
AC_SEARCH_LIBS([strerror],[cposix])
AC_USE_SYSTEM_EXTENSIONS

m4_warn([obsolete],
[The preprocessor macro 'STDC_HEADERS' is obsolete.
  Except in unusual embedded environments, you can safely include all
  C89 headers unconditionally.])dnl
# Autoupdate added the next two lines to ensure that your configure
# script's behavior did not change.  They are probably safe to remove.
AC_CHECK_INCLUDES_DEFAULT
AC_PROG_EGREP

AC_CHECK_HEADERS([string.h])

AC_FUNC_ALLOCA
AC_C_CONST

AC_PREFIX_PROGRAM([gcc])

case "$target_os" in 

*darwin*)
	AC_DEFINE(regcomp,  regcomp1)
	AC_DEFINE(regexec,  regexec1)
	AC_DEFINE(regfree,  regfree1)
	AC_DEFINE(regerror, regerror1)

	;;

esac

AC_CONFIG_FILES([Makefile doc/Makefile test/Makefile])
AC_OUTPUT
